{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 83,
  "lineage": "b5555a1a-6831-bece-e0e7-71bd22114664",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06bd1d3a1a0933179",
            "domain": "vpc",
            "id": "eipalloc-08a9ae2ae85e417d8",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ce174ab3424bcaef",
            "private_dns": "ip-10-0-1-203.ap-south-1.compute.internal",
            "private_ip": "10.0.1.203",
            "public_dns": "ec2-65-0-206-25.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.206.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:275846719472:internet-gateway/igw-0198cd6003bba3ff1",
            "id": "igw-0198cd6003bba3ff1",
            "owner_id": "275846719472",
            "tags": {
              "Name": "My-IGW"
            },
            "vpc_id": "vpc-0aba6c7d2fdfe5cd0"
          },
          "dependencies": [
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat-Gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a9ae2ae85e417d8",
            "id": "nat-0d8f6a021abf6182e",
            "network_interface_id": "eni-0ce174ab3424bcaef",
            "private_ip": "10.0.1.203",
            "public_ip": "65.0.206.25",
            "subnet_id": "subnet-0bc39172821d53c54"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub-sub-1",
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "My-Nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:275846719472:network-acl/acl-0d50d37526ef1752d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0d50d37526ef1752d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "275846719472",
            "subnet_ids": [],
            "tags": {
              "Name": "My-NACL"
            },
            "vpc_id": "vpc-0aba6c7d2fdfe5cd0"
          },
          "dependencies": [
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rt-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03f31c28e9caa2107",
            "owner_id": "275846719472",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0198cd6003bba3ff1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IGW-RT"
            },
            "vpc_id": "vpc-0aba6c7d2fdfe5cd0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rt-Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-085577c7540ecea71",
            "owner_id": "275846719472",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d8f6a021abf6182e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat-RT"
            },
            "vpc_id": "vpc-0aba6c7d2fdfe5cd0"
          },
          "dependencies": [
            "aws_nat_gateway.Nat-Gw",
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ass-Pub-Sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdf2ef38274f825d",
            "route_table_id": "rtb-03f31c28e9caa2107",
            "subnet_id": "subnet-0bc39172821d53c54"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Rt-IGW",
            "aws_subnet.pub-sub-1",
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ass-Pub-Sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0015dbe731eaf5adb",
            "route_table_id": "rtb-03f31c28e9caa2107",
            "subnet_id": "subnet-05dbda577a1f56601"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Rt-IGW",
            "aws_subnet.pub-sub-2",
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ass-pvt-Sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8ce1e05a2838823",
            "route_table_id": "rtb-085577c7540ecea71",
            "subnet_id": "subnet-019717d3762fafc18"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.Nat-Gw",
            "aws_route_table.Rt-Nat",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pvt-sub-1",
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:275846719472:subnet/subnet-0bc39172821d53c54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bc39172821d53c54",
            "map_public_ip_on_launch": true,
            "owner_id": "275846719472",
            "tags": {
              "Name": "pub-sub-1"
            },
            "vpc_id": "vpc-0aba6c7d2fdfe5cd0"
          },
          "dependencies": [
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:275846719472:subnet/subnet-05dbda577a1f56601",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05dbda577a1f56601",
            "map_public_ip_on_launch": true,
            "owner_id": "275846719472",
            "tags": {
              "Name": "pub-sub-2"
            },
            "vpc_id": "vpc-0aba6c7d2fdfe5cd0"
          },
          "dependencies": [
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:275846719472:subnet/subnet-019717d3762fafc18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-019717d3762fafc18",
            "map_public_ip_on_launch": false,
            "owner_id": "275846719472",
            "tags": {
              "Name": "pvt-sub-1"
            },
            "vpc_id": "vpc-0aba6c7d2fdfe5cd0"
          },
          "dependencies": [
            "aws_vpc.My-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My-Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:275846719472:vpc/vpc-0aba6c7d2fdfe5cd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdbf03cbc237169b",
            "default_route_table_id": "rtb-0622e50bf4ba18fe6",
            "default_security_group_id": "sg-0278e40f9ee0a813c",
            "dhcp_options_id": "dopt-143ef27f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aba6c7d2fdfe5cd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0622e50bf4ba18fe6",
            "owner_id": "275846719472",
            "tags": {
              "Name": "My-Vpc"
            }
          }
        }
      ]
    }
  ]
}